--- a/frontend/fronted/src/app/components/trainers/trainers.component.html
+++ b/frontend/fronted/src/app/components/trainers/trainers.component.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="text-center" style="margin-right: 10%; padding: 1%;">
+      <div class="text-center" style="padding: 1%;">
         <button (click)="showClients()" type="button" class="btn btn-primary">
           Ver tabla clientes
         </button>
