--- a/frontend/fronted/src/app/components/trainers/trainers.component.scss
+++ b/frontend/fronted/src/app/components/trainers/trainers.component.scss
@@ -1,12 +1,33 @@
-.items{
+.items {
   align-content: center;
-          /* padding-bottom: 2%; */
-          border-bottom: 1px solid;
-          display: flex;
-          /* padding-bottom: 2%; */
-          border-bottom: 1px solid;
-          flex-direction: column;
-          width: 41%;
-          height: 77px;
-          justify-content: center;
+  /* padding-bottom: 2%; */
+  border-bottom: 1px solid;
+  display: flex;
+  /* padding-bottom: 2%; */
+  border-bottom: 1px solid;
+  flex-direction: column;
+  width: 100%;
+  height: 77px;
+  justify-content: center;
+}
+
+.form-style {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  max-height: 70%;
+}
+.body-card {
+  position: absolute;
+  display: flex;
+  height: 80%;
+  width: 80%;
+}
+
+.carInfo {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  height: 25%;
 }
