--- a/frontend/fronted/src/app/components/trainers/trainers.component.html
+++ b/frontend/fronted/src/app/components/trainers/trainers.component.html
@@ -1,55 +1,74 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="!result">
   <div name="title" class="row">
     <div class="col-12 d-flex justify-content-center text-center">
       <h1>Pantalla de Configuración</h1>
     </div>
   </div>
-  <div name="body" class="row">
-    <form
-      [formGroup]="trainers"
-      style="
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-      "
-    >
-      <div *ngFor="let control of trainers.controls" class="items">
-        <ng-container [formGroup]="control">
-          <div style="padding-left: 1%;">
-            <label>Entrenador {{ control.get("id").value }}</label>
+  <div name="body" class="body">
+    <form [formGroup]="trainers" class="form-style">
+      <div
+        class="form-group"
+        *ngFor="let control of trainers.controls"
+        style="
+          display: flex;
+          width: 100%;
+          flex-direction: column;
+          border-bottom: 1px solid;
+        "
+      >
+        <form [formGroup]="control">
+          <label for="exampleInputEmail1"
+            >Entrenador {{ control.get("id").value }}</label
+          >
+          <div class="form-group row">
+            <label for="Name" class="col-sm-1 col-form-label">Nombre</label>
+            <div class="col-sm-3">
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                aria-describedby="name"
+                formControlName="name"
+              />
+            </div>
+            <label for="Name" class="col-sm-1 col-form-label">Valoración</label>
+            <div class="col-sm-3">
+              <input
+                type="text"
+                class="form-control"
+                id="reputation"
+                aria-describedby="reputation"
+                formControlName="reputation"
+              />
+            </div>
+            <label for="Name" class="col-sm-1 col-form-label"
+              >Plazas disponibles</label
+            >
+            <div class="col-sm-3">
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                aria-describedby="name"
+                formControlName="available"
+              />
+            </div>
           </div>
-          <div class="col-12 d-flex justify-content-center text-center">
-            <label>Nombre: &nbsp;&nbsp;</label
-            ><input style="margin-right: 2%;" formControlName="name" />
-            <label>Valoración:&nbsp;&nbsp; </label>
-            <input
-              type="number"
-              min="0.0"
-              max="5.0"
-              style="margin-right: 2%;"
-              formControlName="reputation"
-            />
-            <label>Plazas disponibles:&nbsp;&nbsp; </label
-            ><input
-              type="number"
-              min="0.0"
-              style="margin-right: 2%;"
-              formControlName="available"
-            />
-          </div>
-        </ng-container>
+        </form>
       </div>
     </form>
     <div class="row">
-      <div class="text-right" style="margin-right: 10%; padding: 1%;">
+      <div class="text-right" style="padding: 1%;">
         <button (click)="addTraner()" type="button" class="btn btn-primary">
           Añadir entrenador
         </button>
       </div>
     </div>
     <div class="row">
-      <div class="text-center" style="padding: 1%;">
+      <div
+        class="text-center"
+        style="padding: 1%; display: flex; justify-content: space-evenly;"
+      >
         <button (click)="showClients()" type="button" class="btn btn-primary">
           Ver tabla clientes
         </button>
@@ -60,6 +79,33 @@
         >
           Calcular resultados
         </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid" *ngIf="result">
+  <div name="title" class="row">
+    <div class="col-12 d-flex justify-content-center text-center">
+      <h1>Pantalla de resultados</h1>
+    </div>
+  </div>
+  <!-- <div matTooltip="Info about the action">
+    hols <i matTooltip= {{"Valoración" + item.reputation}} class="fas fa-info-circle"></i>
+  </div> -->
+  <div class="body-card">
+    <div class="carInfo" *ngFor="let item of resultData">
+      <div class="car-title">
+        <div>{{ item.trainer.name }}</div>
+        <div>
+          <i matTooltip="Info about the action" class="fas fa-info-circle"></i>
+        </div>
+      </div>
+      <div class="car-body">
+        <label>Clientes: </label>
+        <div *ngFor="let client of item.clients">
+          {{ client.name }}
+        </div>
       </div>
     </div>
   </div>
