--- a/frontend/fronted/src/app/components/trainers/trainers.component.scss
+++ b/frontend/fronted/src/app/components/trainers/trainers.component.scss
@@ -19,16 +19,18 @@
   max-height: 70%;
 }
 .body-card {
-  position: absolute;
   display: flex;
   height: 80%;
-  width: 80%;
+  width: 100%;
+  overflow: hidden;
+  flex-wrap: wrap;
+  overflow-y: auto;
 }
 
 .carInfo {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 31%;
   height: 30%;
   border-radius: 5px;
   margin: 1%;
@@ -40,6 +42,8 @@
   display: flex;
   padding: 1%;
   flex-direction: column;
+  overflow: hidden;
+  overflow-y: auto;
 }
 .hf-color {
   background-color: grey;
